--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,14 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+
+    //OkHttp
+    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
+
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
