--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,10 +34,15 @@ dependencies {
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
 
     //OkHttp
     implementation 'com.squareup.okhttp3:okhttp:3.12.1'
 
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //reactive
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.5'
 }
